@@ -1,31 +1,20 @@
 package quilt.internal.tasks.build;
 
 import java.io.BufferedWriter;
-import java.io.File;
-import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-import java.util.stream.Stream;
 
-import org.gradle.api.GradleException;
-import org.gradle.api.file.FileCollection;
-import org.gradle.api.file.RegularFile;
 import org.gradle.api.file.RegularFileProperty;
-import org.gradle.api.tasks.InputFiles;
-import org.gradle.api.tasks.Optional;
-import org.jetbrains.annotations.NotNull;
 import org.quiltmc.enigma.api.Enigma;
 import org.quiltmc.enigma.api.EnigmaProfile;
 import org.quiltmc.enigma.api.EnigmaProject;
-import org.quiltmc.enigma.api.service.JarIndexerService;
 import org.quiltmc.enigma.command.Command;
 import org.quiltmc.enigma.command.FillClassMappingsCommand;
 import org.quiltmc.enigma.command.CommandsUtil;
@@ -41,82 +30,52 @@ import net.fabricmc.mappingio.adapter.MappingDstNsReorder;
 import net.fabricmc.mappingio.format.MappingFormat;
 import net.fabricmc.mappingio.format.tiny.Tiny2FileReader;
 import net.fabricmc.mappingio.tree.MemoryMappingTree;
-import org.gradle.api.provider.Property;
+
 import org.gradle.api.tasks.InputFile;
 import org.gradle.api.tasks.OutputFile;
 import org.gradle.api.tasks.TaskAction;
 import org.jetbrains.annotations.VisibleForTesting;
 import quilt.internal.Constants;
 import quilt.internal.tasks.DefaultMappingsTask;
+import quilt.internal.tasks.EnigmaProfileConsumingTask;
+import quilt.internal.util.ProviderUtil;
 
-import static org.quiltmc.enigma_plugin.Arguments.SIMPLE_TYPE_FIELD_NAMES_PATH;
-
-public abstract class AddProposedMappingsTask extends DefaultMappingsTask {
-    private static Path getPath(RegularFileProperty fileProperty) {
-        return fileProperty.map(RegularFile::getAsFile).map(File::toPath).get();
-    }
-
-    @OutputFile
-    public File outputMappings;
-
+public abstract class AddProposedMappingsTask extends DefaultMappingsTask implements EnigmaProfileConsumingTask {
     @InputFile
     public abstract RegularFileProperty getInputJar();
 
     @InputFile
     public abstract RegularFileProperty getInputMappings();
 
-    @InputFile
-    public abstract RegularFileProperty getProfile();
-
-    @Optional
-    @InputFiles
-    protected abstract Property<FileCollection> getSimpleTypeFieldNames();
+    @OutputFile
+    public abstract RegularFileProperty getOutputMappings();
 
     public AddProposedMappingsTask() {
-        super(Constants.Groups.BUILD_MAPPINGS_GROUP);
-        this.outputMappings = new File(fileConstants.buildDir, getName() + ".tiny");
-
-        this.getSimpleTypeFieldNames().set(
-            this.getProfile()
-                .map(RegularFile::getAsFile)
-                .map(File::toPath)
-                .map(profilePath -> {
-                    try {
-                        return this.getProject().files(
-                            EnigmaProfile.read(profilePath).getServiceProfiles(JarIndexerService.TYPE).stream()
-                                .flatMap(service -> service.getArgument(SIMPLE_TYPE_FIELD_NAMES_PATH).stream())
-                                .map(stringOrStrings -> stringOrStrings.mapBoth(Stream::of, Collection::stream))
-                                .flatMap(bothStringStreams ->
-                                    bothStringStreams.left().orElseGet(bothStringStreams::rightOrThrow)
-                                )
-                                .toList()
-                        );
-                    } catch (IOException e) {
-                        throw new GradleException("Failed to read enigma profile", e);
-                    }
-                })
-        );
+        super(Constants.Groups.BUILD_MAPPINGS);
     }
 
     @TaskAction
     public void addProposedMappings() throws Exception {
-        getLogger().lifecycle(":seeking auto-mappable entries");
+        this.getLogger().lifecycle(":seeking auto-mappable entries");
 
-        Path input = getPath(this.getInputMappings());
-        Path output = outputMappings.toPath();
-        Path jar = getPath(this.getInputJar());
-        Path profilePath = getPath(this.getProfile());
+        final Path input = ProviderUtil.getPath(this.getInputMappings());
+        final Path output = ProviderUtil.getPath(this.getOutputMappings());
+        final Path jar = ProviderUtil.getPath(this.getInputJar());
 
-        addProposedMappings(input, output, fileConstants.tempDir.toPath(), jar, profilePath);
+        // TODO figure out what this tempDir is for
+        //  the only tasks that output there depend on this task
+        addProposedMappings(input, output, this.fileConstants.tempDir.toPath(), jar, this.getEnigmaProfile().get());
     }
 
     @VisibleForTesting
-    public static void addProposedMappings(Path input, Path output, Path tempDir, Path jar, Path profilePath) throws Exception {
-        String name = output.getFileName().toString();
-        Path preprocessedMappings = tempDir.resolve(name.replace(".tiny", "-preprocessed.tiny"));
-        Path processedMappings = tempDir.resolve(name.replace(".tiny", "-processed.tiny"));
+    public static void addProposedMappings(
+        Path input, Path output, Path tempDir, Path jar, EnigmaProfile profile
+    ) throws Exception {
+        final String name = output.getFileName().toString();
+        final Path preprocessedMappings = tempDir.resolve(name.replace(".tiny", "-preprocessed.tiny"));
+        final Path processedMappings = tempDir.resolve(name.replace(".tiny", "-processed.tiny"));
 
-        List<String> namespaces;
+        final List<String> namespaces;
         try (Reader reader = Files.newBufferedReader(input, StandardCharsets.UTF_8)) {
             namespaces = Tiny2FileReader.getNamespaces(reader);
         }
@@ -129,59 +88,56 @@ public abstract class AddProposedMappingsTask extends DefaultMappingsTask {
             Files.createDirectories(tempDir);
         }
 
-        boolean extraProcessing = preprocessFile(input, preprocessedMappings);
-        Path commandInput = extraProcessing ? preprocessedMappings : input;
-        Path commandOutput = extraProcessing ? processedMappings : output;
+        final boolean extraProcessing = preprocessFile(input, preprocessedMappings);
+        final Path commandInput = extraProcessing ? preprocessedMappings : input;
+        final Path commandOutput = extraProcessing ? processedMappings : output;
 
         runCommands(jar,
-            commandInput,
-            commandOutput,
-            profilePath,
-            namespaces.get(0),
-            "named"
+            commandInput, commandOutput,
+            profile,
+            namespaces.getFirst(), "named"
         );
 
         if (extraProcessing) {
-            MemoryMappingTree outputTree = postProcessTree(input, processedMappings);
+            final MemoryMappingTree outputTree = postProcessTree(input, processedMappings);
             try (MappingWriter writer = MappingWriter.create(output, MappingFormat.TINY_2_FILE)) {
                 outputTree.accept(writer);
             }
         }
     }
 
-    private static void runCommands(Path jar, Path input, Path output, Path profilePath, String fromNamespace, String toNamespace) throws Exception {
-        EnigmaProfile profile = EnigmaProfile.read(profilePath);
-        Enigma enigma = Command.createEnigma(profile, null);
+    private static void runCommands(Path jar, Path input, Path output, EnigmaProfile profile, String fromNamespace, String toNamespace) throws Exception {
+        final Enigma enigma = Command.createEnigma(profile, null);
 
-        EnigmaProject project = Command.openProject(jar, input, enigma);
+        final EnigmaProject project = Command.openProject(jar, input, enigma);
 
-        boolean debug = System.getProperty("qm.addProposedMappings.debug", "false").toLowerCase(Locale.ROOT).equals("true");
-        EntryTree<EntryMapping> withProposals = project.getRemapper().getMappings(); // Proposed names are automatically added when opening a project
+        final boolean debug = System.getProperty("qm.addProposedMappings.debug", "false").toLowerCase(Locale.ROOT).equals("true");
+        final EntryTree<EntryMapping> withProposals = project.getRemapper().getMappings(); // Proposed names are automatically added when opening a project
 
         // TODO: Disable fillAll after fixing the tiny v2 writer to avoid adding unnecessary class names
-        EntryTree<EntryMapping> result = FillClassMappingsCommand.exec(project.getJarIndex(), withProposals, true, debug);
+        final EntryTree<EntryMapping> result = FillClassMappingsCommand.exec(project.getJarIndex(), withProposals, true, debug);
 
         Utils.delete(output);
-        MappingSaveParameters profileParameters = enigma.getProfile().getMappingSaveParameters();
-        MappingSaveParameters saveParameters = new MappingSaveParameters(profileParameters.fileNameFormat(), /*writeProposedNames*/ true, fromNamespace, toNamespace);
+        final MappingSaveParameters profileParameters = enigma.getProfile().getMappingSaveParameters();
+        final MappingSaveParameters saveParameters = new MappingSaveParameters(profileParameters.fileNameFormat(), /*writeProposedNames*/ true, fromNamespace, toNamespace);
         CommandsUtil.getReadWriteService(enigma, output).write(result, output, saveParameters);
 
         if (debug) {
-            Path deltaFile = output.getParent().resolve(output.getFileName().toString() + "-fill-delta.txt");
-            MappingDelta<EntryMapping> fillDelta = ((DeltaTrackingTree<EntryMapping>) result).takeDelta();
+            final Path deltaFile = output.getParent().resolve(output.getFileName().toString() + "-fill-delta.txt");
+            final MappingDelta<EntryMapping> fillDelta = ((DeltaTrackingTree<EntryMapping>) result).takeDelta();
 
             try (BufferedWriter writer = Files.newBufferedWriter(deltaFile)) {
-                List<String> content = fillDelta.getChanges().getAllEntries()
+                final List<String> content = fillDelta.getChanges().getAllEntries()
                         .map(Objects::toString)
                         .toList();
 
-                for (String s : content) {
+                for (final String s : content) {
                     writer.write(s);
                     writer.newLine();
                 }
             }
 
-            Path debugFile = output.getParent().resolve(output.getFileName().toString() + "-tree.txt");
+            final Path debugFile = output.getParent().resolve(output.getFileName().toString() + "-tree.txt");
             try (BufferedWriter writer = Files.newBufferedWriter(debugFile)) {
                 EntryTreePrinter.print(new PrintWriter(writer), project.getRemapper().getProposedMappings());
             }
@@ -191,16 +147,16 @@ public abstract class AddProposedMappingsTask extends DefaultMappingsTask {
     // Reorder dst namespaces to `<src-namespace> named [others...]`
     // Enigma doesn't support multiple dst namespaces, and just uses the first one
     private static boolean preprocessFile(Path inputMappings, Path output) throws Exception {
-        MemoryMappingTree inputTree = new MemoryMappingTree();
+        final MemoryMappingTree inputTree = new MemoryMappingTree();
         try (Reader reader = Files.newBufferedReader(inputMappings, StandardCharsets.UTF_8)) {
             Tiny2FileReader.read(reader, inputTree);
         }
 
         // Reorder destination namespaces to put the named namespace first
-        List<String> dstNamespaces = new ArrayList<>(inputTree.getDstNamespaces());
-        if (!dstNamespaces.get(0).equals("named")) {
-            MemoryMappingTree outputTree = new MemoryMappingTree();
-            int i = dstNamespaces.indexOf("named");
+        final List<String> dstNamespaces = new ArrayList<>(inputTree.getDstNamespaces());
+        if (!dstNamespaces.getFirst().equals("named")) {
+            final MemoryMappingTree outputTree = new MemoryMappingTree();
+            final int i = dstNamespaces.indexOf("named");
             dstNamespaces.set(i, dstNamespaces.get(0));
             dstNamespaces.set(0, "named");
             inputTree.accept(new MappingDstNsReorder(outputTree, dstNamespaces));
@@ -217,30 +173,22 @@ public abstract class AddProposedMappingsTask extends DefaultMappingsTask {
 
     // Merge input mappings with the proposed mappings to restore the lost namespaces
     private static MemoryMappingTree postProcessTree(Path inputMappings, Path processedMappings) throws Exception {
-        MemoryMappingTree inputTree = new MemoryMappingTree();
+        final MemoryMappingTree inputTree = new MemoryMappingTree();
         try (Reader reader = Files.newBufferedReader(inputMappings, StandardCharsets.UTF_8)) {
             Tiny2FileReader.read(reader, inputTree);
         }
 
-        MemoryMappingTree processedTree = new MemoryMappingTree();
+        final MemoryMappingTree processedTree = new MemoryMappingTree();
         try (Reader reader = Files.newBufferedReader(processedMappings, StandardCharsets.UTF_8)) {
             Tiny2FileReader.read(reader, processedTree);
         }
 
         // Merge trees
-        MemoryMappingTree output = new MemoryMappingTree();
+        final MemoryMappingTree output = new MemoryMappingTree();
         inputTree.accept(output);
         // Merge processed tree after original to keep the original namespaces order
         processedTree.accept(output);
 
         return output;
-    }
-
-    public File getOutputMappings() {
-        return outputMappings;
-    }
-
-    public void setOutputMappings(File outputMappings) {
-        this.outputMappings = outputMappings;
     }
 }
